all functionality is done

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-VITE_APP_APPWRITE_URL='https://cloud.appwrite.io/v1'
-VITE_APPWRITE_PROJECT_ID="653732705958e5f6b429"
-VITE_APPWRITE_DATABASE_ID="6537337c7f4112a6d923"
-VITE_APPWRITE_COLLECTION_ID="653733d699f5f282344e"
-VITE_APPWRITE_BUCKET_ID="6537356b4fa24bac5177"
+VITE_APP_APPWRITE_URL='test enviroment'
+VITE_APPWRITE_PROJECT_ID=""
+VITE_APPWRITE_DATABASE_ID=""
+VITE_APPWRITE_COLLECTION_ID=""
+VITE_APPWRITE_STORAGE_ID=""
